# UFO-SIGHTING-CLASSIFICATION

./: COLLABORATORS.md  README.md  apptainer.def  main.py  pyproject.toml  send_message.py
src/: classifier.py  consumer.py  dashboard.py
tests/: test_classifier.py  test_classifier_edge_cases.py  test_consumer.py
